unpackaged/main/default/objects/omnistudio__VlocityDataPack__c/omnistudio__VlocityDataPack__c.object-meta.xml
<CustomObject>
    <label>Vlocity DataPack Object</label>
    <nameField>
        <label>Vlocity DataPack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DataPack Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>