unpackaged/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__IsLastProcessed__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__IsLastProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last Processed</label>
    <type>Checkbox</type>
</CustomField>