unpackaged/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__LastProcessedBy__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__LastProcessedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastProcessedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vlocity_Data_Packs</relationshipName>
    <type>Lookup</type>
</CustomField>